k8s/prometheus/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: my-root-ca-issuer

  labels:
    app: grafana
spec:
  rules:
  - host: grafana-imt-atlantique-devops-2024.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana-imt-atlantique-devops-2024.com
